# mlz_2025_capstone2_project

./: Dockerfile  LICENSE  README.md  main.py  notebook.ipynb  notebook.py  predict.py  pyproject.toml  serve.py  train.py
